# ChangeLog for app-mobilephone/gnome-phone-manager
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-mobilephone/gnome-phone-manager/ChangeLog,v 1.28 2009/03/28 22:55:13 eva Exp $

  28 Mar 2009; Gilles Dartiguelongue <eva@gentoo.org>
  gnome-phone-manager-0.8-r1.ebuild:
  Call intltoolize when needed, bug #262943.

  01 Mar 2009; Tiziano Müller <dev-zero@gentoo.org>
  gnome-phone-manager-0.60.ebuild:
  Added net-wireless/bluez as possible dep for bluetooth

  24 Jul 2008; Alin Năstac <mrness@gentoo.org>
  gnome-phone-manager-0.60.ebuild:
  Fix gnokii dependency atom (#232300).

*gnome-phone-manager-0.60 (12 Jul 2008)

  12 Jul 2008; Alin Năstac <mrness@gentoo.org>
  +gnome-phone-manager-0.60.ebuild:
  Version bump.

*gnome-phone-manager-0.51 (05 Jun 2008)

  05 Jun 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +gnome-phone-manager-0.51.ebuild:
  bump to 0.51. Add spell checking to "Send Message", fix accessing devices
  via IrDA, USB and serial cables.

*gnome-phone-manager-0.50 (13 Mar 2008)

  13 Mar 2008; Gilles Dartiguelongue <eva@gentoo.org>
  -gnome-phone-manager-0.8.ebuild, -gnome-phone-manager-0.20.ebuild,
  -gnome-phone-manager-0.30.ebuild, +gnome-phone-manager-0.50.ebuild:
  bump to 0.50 and cleanup old revisions

*gnome-phone-manager-0.40 (10 Feb 2008)

  10 Feb 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +gnome-phone-manager-0.40.ebuild:
  bump to 0.40

  13 Nov 2007; Christian Faulhammer <opfer@gentoo.org>
  gnome-phone-manager-0.8-r1.ebuild:
  stable x86, bug 198845

*gnome-phone-manager-0.8-r1 (12 Nov 2007)

  12 Nov 2007; Mart Raudsepp <leio@gentoo.org>
  +gnome-phone-manager-0.8-r1.ebuild:
  Fix up compatibility with gtk+-2.12 for v0.8 too for bug 196813

*gnome-phone-manager-0.30 (29 Oct 2007)

  29 Oct 2007; Gilles Dartiguelongue <eva@gentoo.org>
  +gnome-phone-manager-0.30.ebuild:
  bump to 0.30

  28 Oct 2007; Gilles Dartiguelongue <eva@gentoo.org>