@@ -1,14 +1,20 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX gnome-phone-manager-0.8-as-needed.patch 3067 RMD160 ba3abefb40e3ec60ccfe261bee12af89ac8f812e SHA1 3edcae492347ff1188e1710674bf14fe4d813d46 SHA256 4f809b63b64ecb7f01c2d1e9f5d9a52c6b23a220eddff2c4fb73d69a1708e596
 AUX gnome-phone-manager-0.8-pixmaps.patch 430 RMD160 6a3dc59295828bcc6f9aa847a0600014f7bf37af SHA1 2b8ca784162df9cc299b17cc66bd0a6faf64517d SHA256 5cc01797818af35569697d1d57273753f355e1da5ff52034c4f73d9569a445cd
-DIST gnome-phone-manager-0.40.tar.bz2 484276 RMD160 deb89f3ef08f5aab70e4360994600b6c58f7bc2f SHA1 3958cb1eddfb2c9b7bffe9f16e4cac83b0ec8a80 SHA256 afc6136558d4cd1b3b735d510449085c9dd2b7b1b8308405bf6863ac9aad8ac3
-DIST gnome-phone-manager-0.50.tar.bz2 476450 RMD160 784e3e44a3ffadab2e341abf344359fa3a466010 SHA1 6f9018ac2850ca249a07c7955591a8f7992a563e SHA256 efe76d59be6503bc2ce8a10e32dbe9bb32c23f9acd46ee40a47fbce1c34c78c1
-DIST gnome-phone-manager-0.51.tar.bz2 477369 RMD160 4eeaa5f493ab0f0042a22a7f704535203ab8a545 SHA1 5fe32f2b33fc1d63fc8563f82d1100d9e7f28298 SHA256 8e47121e03a4faaca44b6acd05b49c6cf45a8317bbc0ec907013a2fe3e62861a
 DIST gnome-phone-manager-0.60.tar.bz2 481962 RMD160 d46be5cf1d05ee9b3cc8b817f7ebad257612e9da SHA1 b10105b085ac636e53ac30dee2f64efa9b30af4a SHA256 44fd999cd1b393ff993b0300346e166526fa73cc6096e9528d3f17915191706d
+DIST gnome-phone-manager-0.65.tar.bz2 465607 RMD160 c1ce7d8654e85c791cdfb75a87d916a7d798d4be SHA1 c7f78934f3c4f0932d7bbde930f9ad6da5b5c5b6 SHA256 7fd6854702446133511650e0a24698a71bf4096a11546a25b453d5dd74890e96
 DIST gnome-phone-manager-0.8.tar.bz2 675868 RMD160 90aa1bb270bb85c18337557f115faa74efecd9ca SHA1 939760b9f642595a6385b294a36b3eda27ed7ed4 SHA256 23381eae0c4ecfae5b759e5169c72f8057bd234f21f9b2d074432cc8c08c9456
-EBUILD gnome-phone-manager-0.40.ebuild 1260 RMD160 dfe0e45aa85fb97cf57ae276adb8e86d03df6625 SHA1 6db2467c4742aed77a7475844c8a8671af06a2d0 SHA256 fe8613b455c02261beed0c02a664c584747ca88cb880aedaf1be41e17795ac4a
-EBUILD gnome-phone-manager-0.50.ebuild 1294 RMD160 437dbece770e5cc522c79326dafa7cb71ef576c2 SHA1 3dd82d934a3b4e62ffca691c7b6c36c1b388ec75 SHA256 105de4bcdedbba690161ee8a9065e05ccf3d2891b0e48107f476c7c344aae515
-EBUILD gnome-phone-manager-0.51.ebuild 1094 RMD160 72577cf4509df4b46ed1eeeed48fd93ddeccfc84 SHA1 20a5b2bd3f7ea136ef2a906b4b5f3a34241e1e26 SHA256 f24a36abde7aeea966ebcb3f92cd79f3fe46a055ce0b14ac8d3e5572aa95809c
 EBUILD gnome-phone-manager-0.60.ebuild 1121 RMD160 8c8dd4984a077dd4b2570305e31e7794f8f828f2 SHA1 cf9414f5f0a0dde40cdf361de8941f33a699283e SHA256 1c695788b63ff105f0a4d7b09976613208669bd2e3149911f479c0542f5f8d9d
+EBUILD gnome-phone-manager-0.65.ebuild 1203 RMD160 c9b180e6eb3cee2b79ac8537ae77c557c5ae7896 SHA1 ef224c6e6464a88000d8cd1375299a2360581031 SHA256 206eab25b34f4ca08b18ad02b94dcb0c990af2fd1ae495543f8027608735ba78
 EBUILD gnome-phone-manager-0.8-r1.ebuild 1558 RMD160 18ab747f31788f4ea9537e67dcdda6d0dbc69d8d SHA1 367a70dc28b077897a79886b175d279da1cd8b61 SHA256 c70664fb8399a335587d297afcae96690cec5ee746bab2dc7c7fed0c4ea6ade8
-MISC ChangeLog 4772 RMD160 d76d9d3865d2aa921dad6fd9039c8f6fa20ae35f SHA1 3432747c2a9864510228a95a2b01d9ef6aa0fcb1 SHA256 3253adc095cd540302bcca796beaeb701172b5d24043244d1b24eceb221e230a
+MISC ChangeLog 5048 RMD160 16fb641153155fb2eab267efe79894bad3a3f541 SHA1 db60b0d08620cc37f6faa5b5e59ea8b470443c90 SHA256 aa82245886af17d0785470eed7cc8fe77d6d743cee6fd8a007ea836727c5d1a4
 MISC metadata.xml 735 RMD160 c4a26d0a861a02a327f9adf71e1df9b4d9aedc38 SHA1 0484199b0fb459388f1bd7531a70208a80c8c62e SHA256 6432a2d6b381e076ef9aa857b86ee4d4d76a72b81307e17267cc5c33cfb81583
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.11 (GNU/Linux)
+
+iEYEARECAAYFAkn/e3QACgkQ1fmVwcYIWAZQ2QCffjVp6M/kl3f8UgU91YvwDb9L
+UUUAniO2Cmue+PKeuzWZdhO+zb1fDkz0
+=QJgA
+-----END PGP SIGNATURE-----
