@@ -1,6 +1,13 @@
 # ChangeLog for app-mobilephone/gnome-phone-manager
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-mobilephone/gnome-phone-manager/ChangeLog,v 1.28 2009/03/28 22:55:13 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-mobilephone/gnome-phone-manager/ChangeLog,v 1.29 2009/05/04 23:34:07 eva Exp $
+
+*gnome-phone-manager-0.65 (04 May 2009)
+
+  04 May 2009; Gilles Dartiguelongue <eva@gentoo.org>
+  -gnome-phone-manager-0.40.ebuild, -gnome-phone-manager-0.50.ebuild,
+  -gnome-phone-manager-0.51.ebuild, +gnome-phone-manager-0.65.ebuild:
+  Bump to 0.65. Clean up old revisions.
 
   28 Mar 2009; Gilles Dartiguelongue <eva@gentoo.org>
   gnome-phone-manager-0.8-r1.ebuild:
